[package]
name = "helpers"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" , branch = "polkadot-v0.9.28" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
num-integer = "0.1.44"
num-traits = { version = "0.2.14", default-features = false }
rust_decimal = { version = "1.2", default-features = false, features = ["maths"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.0"

[features]
default = ["std"]
std = ["codec/std", "frame-support/std", "sp-std/std", "scale-info/std"]
