[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "pallet-options-pricing"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, package = "parity-scale-codec", version = "3.1", features = [ "derive" ] }

composable-support = { default-features = false, git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }
composable-traits = { default-features = false, git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }

frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.27' }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

scale-info = { version = "2.1", default-features = false, features = [ "derive" ] }
serde = { version = "1", optional = true }

sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

helpers = { default-features = false, path = "../helpers" }
traits = { default-features = false, path = "../traits" }

[dev-dependencies]
composable-support = { default-features = false, git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }
greeks = "0.5.0"
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "377213f750755cc48e80a3131eaae63b5eda8362" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "377213f750755cc48e80a3131eaae63b5eda8362" }
pallet-assets = { default-features = false, git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-currency-factory = { git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }
pallet-governance-registry = { package = "pallet-governance-registry", git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }
pallet-options-pricing = { path = "../options-pricing", default-features = false }
pallet-oracle = { git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-tokenized-options = { path = "../tokenized-options", default-features = false }
pallet-vault = { git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }
primitives = { default-features = false, git = "https://github.com/composableFi/composable", rev = "bfce651ee111a56f1c80cf7f9877e24e61a55c53" }
proptest = "1.0"

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "scale-info/std",
  "serde/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "sp-io/std",
  "sp-core/std",
  "sp-std/std",
]
