[package]
name = "traits"
version = "0.0.1"
edition = "2021"

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

serde = { version = "1.0.144", optional = true }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"]}

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.0.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "serde/std",
  "frame-support/std",
  "sp-core/std",
  "sp-runtime/std",
]
